# dushengcdn_server/service/openresty/types.go
@@ -32,6 +32,10 @@ const (
 	OriginResolveModePublishResolve = "publish_resolve"
 	OriginResolveModeStaticIP       = "static_ip"
 	OriginResolveModeOriginGroup    = "origin_group"
+	RouteRuleMatchTypePrefix        = "prefix"
+	RouteRuleMatchTypeExact         = "exact"
+	RouteRuleMatchTypeRegex         = "regex"
+	RouteRuleMatchTypeDefault       = "default"
 )
 
 type SupportFile struct {
@@ -126,6 +130,92 @@ type Route struct {
 	RegionRestrictionMode      string
 	RegionRestrictionCountries []string
 	Certificates               []TLSCertificate
+	Rules                      []RouteRule
+}
+
+type RouteRule struct {
+	ID                         uint
+	MatchType                  string
+	Path                       string
+	Priority                   int
+	Enabled                    bool
+	OriginURL                  string
+	OriginHost                 string
+	OriginHostHeader           string
+	OriginSNI                  string
+	OriginTLSVerify            *bool
+	OriginCABundle             string
+	OriginResolveMode          string
+	Upstreams                  []string
+	Limit                      RouteRuleLimit
+	LimitConnPerServer         *int
+	LimitConnPerIP             *int
+	LimitRate                  string
+	ProxyBuffering             RouteRuleProxyBuffering
+	ProxyBufferingMode         string
+	Cache                      RouteRuleCache
+	CacheEnabled               *bool
+	CachePolicy                string
+	CacheRules                 []string
+	CustomHeaders              []CustomHeader
+	PoW                        RouteRulePoW
+	PoWEnabled                 *bool
+	WAF                        RouteRuleWAF
+	WAFEnabled                 *bool
+	WAFMode                    string
+	CC                         RouteRuleCC
+	CCEnabled                  *bool
+	CCMode                     string
+	BasicAuth                  RouteRuleBasicAuth
+	BasicAuthEnabled           *bool
+	BasicAuthUsername          string
+	BasicAuthPasswordHash      string
+	Region                     RouteRuleRegion
+	RegionRestrictionEnabled   *bool
+	RegionRestrictionMode      string
+	RegionRestrictionCountries []string
+}
+
+type RouteRuleLimit struct {
+	LimitConnPerServer int
+	LimitConnPerIP     int
+	LimitRate          string
+}
+
+type RouteRuleProxyBuffering struct {
+	Mode string
+}
+
+type RouteRuleCache struct {
+	Enabled *bool
+	Policy  string
+	Rules   []string
+}
+
+type RouteRuleBasicAuth struct {
+	Enabled      *bool
+	Username     string
+	PasswordHash string
+}
+
+type RouteRuleWAF struct {
+	Enabled *bool
+	Mode    string
+}
+
+type RouteRuleCC struct {
+	Enabled *bool
+	Mode    string
+}
+
+type RouteRulePoW struct {
+	Enabled *bool
+}
+
+type RouteRuleRegion struct {
+	Enabled   *bool
+	Mode      string
+	Countries []string
 }
 
 type AccessRoute struct {
